--- a/index.html
+++ b/index.html
@@ -6,23 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <script src="java.js"></script>
 </head>
 <body>
  
   
   <table id="conteiner">
     <thead>
-      <tr id="tr">
+      <tr>
         
       </tr>
     </thead>
     <tbody>
 
     </tbody>
+    <tfoot>
+
+    </tfoot>
+    <thead>
+
+    </thead>
   </table>
-  <div class="inp" id="inp">
+  <form action="" id="inputs">
     <label for="saxe">saxeli</label>
-    <input type="text"  name="saxe">
+    <input type="text"  name="saxeli">
 
     <label for="gvar">gvari</label>
     <input type="text"  name="gvar">
@@ -41,8 +48,8 @@
     <label for="ist">istoria</label>
     <input type="text"  name="ist">
     <button  type="submit">add</button>
-  </div>
-  <script src="javascript.js"></script>
+  </form>
+ 
   
   
 </body>
